--- a/package.json
+++ b/package.json
@@ -4,14 +4,34 @@
   "license": "MIT",
   "scripts": {},
   "private": true,
-  "dependencies": {},
+  "dependencies": {
+    "@nrwl/js": "^13.7.3",
+    "core-js": "^3.6.5",
+    "regenerator-runtime": "0.13.7",
+    "tslib": "^2.0.0"
+  },
   "devDependencies": {
-    "@nrwl/tao": "13.7.3",
     "@nrwl/cli": "13.7.3",
+    "@nrwl/cypress": "13.7.3",
+    "@nrwl/eslint-plugin-nx": "13.7.3",
+    "@nrwl/jest": "13.7.3",
+    "@nrwl/linter": "13.7.3",
+    "@nrwl/tao": "13.7.3",
+    "@nrwl/web": "13.7.3",
     "@nrwl/workspace": "13.7.3",
+    "@types/jest": "27.0.2",
     "@types/node": "16.11.7",
-    "typescript": "~4.5.2",
-    "prettier": "^2.5.1"
+    "@typescript-eslint/eslint-plugin": "~5.10.0",
+    "@typescript-eslint/parser": "~5.10.0",
+    "babel-jest": "27.2.3",
+    "cypress": "^9.1.0",
+    "eslint": "~8.7.0",
+    "eslint-config-prettier": "8.1.0",
+    "eslint-plugin-cypress": "^2.10.3",
+    "jest": "27.2.3",
+    "prettier": "^2.5.1",
+    "ts-jest": "27.0.5",
+    "typescript": "~4.5.2"
   },
   "workspaces": [
     "packages/**"
